# capturer

./: .gitignore  CMakeLists.txt  Makefile  README  capturer.cpp  capturer.h  capturer.hpp  config.cpp  encoder.cpp  encoder.h  encoder.hpp  face-wrapper.cpp  frame-buffer.cpp  frame-buffer.h  frame-data.cpp  frame-data.h  glogger.cpp  interfaces.h  logger.hpp  main.cpp  manager.cpp  manager.h  mtndn-object.cpp  mtndn-object.h  mtndn-utils.cpp  name-components.cpp  name-components.h  namespacer.cpp  namespacer.h  params.h  publisher.cpp  publisher.h  utils.cpp  utils.h  video-capturer.cpp  video-capturer.h  video-encoder.cpp  video-encoder.h  video-publisher-frames.cpp  video-publisher-frames.h  (+4 more)
doc/: README.txt  default.conf.sample
src/: CMakeLists.txt  capturer.cpp  config.cpp  config.h  glogger.h  main.cpp  manager.h  mtndn-utils.h  name-components.cpp  name-components.h  params.h  publisher.cpp  publisher.h  utils.cpp  utils.h  video-capturer.cpp  video-encoder.cpp  video-encoder.h  video-publisher-frames.cpp  video-publisher-stream.cpp  video-publisher-stream.h
